--- a/Resources/Public/css/my.css
+++ b/Resources/Public/css/my.css
@@ -23,6 +23,12 @@
 		border-radius: 4px;
 	}
 
+	.page-title h1.display-1 {
+		color: rgb(85, 85, 85);
+		background-color: rgba(255,255,255,0.7);
+		border-radius: 4px;
+	}
+
 	#jumbotron-header h1 span.header-h1,
 	#jumbotron-header h1 small {
 		color: rgb(85, 85, 85);
