--- a/Resources/Private/ext/news/Templates/News/Detail.html
+++ b/Resources/Private/ext/news/Templates/News/Detail.html
@@ -8,7 +8,6 @@
 	=====================
 		News/Detail.html
 -->
-<div>TW-PORT80GURU</div>
 <f:section name="content">
 	<f:if condition="{newsItem}">
 		<n:format.nothing>
@@ -53,10 +52,12 @@
 			<f:then>
 				<f:render section="headline" arguments="{_all}" />
 				<div class="row">
-					<div class="col-md-8">
+					<div class="col-md-12">
 						<f:render section="inner-content" arguments="{_all}" />
 					</div>
-					<div class="col-md-4 gallery">
+				</div>
+				<div class="row">
+					<div class="col-md-12 gallery">
 						<f:for each="{newsItem.media}" as="mediaElement">
 							<f:if condition="{mediaElement.originalResource.type} == 2">
 								<f:render partial="Detail/MediaImage" arguments="{mediaElement: mediaElement, settings:settings}"/>
@@ -104,6 +105,7 @@
 		</f:if>
 		<!-- main text -->
 		<div class="news-text-wrap" itemprop="articleBody">
+			<span>TW-PORT80GURU</span>
 			<f:format.html>{newsItem.bodytext}</f:format.html>
 		</div>
 	</n:renderMedia>
