--- a/Resources/Public/css/my.css
+++ b/Resources/Public/css/my.css
@@ -2,26 +2,36 @@
 
 @media all {
 
+	/*
+	font-family: 'Josefin Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	font-family: 'Raleway', sans-serif;
+	 */
+
 	body {
-		font-family: 'Titillium Web', sans-serif !important;
-		font-weight: 100 !important;
-		font-size: 18px;
-		background: #e9ebe9;
+		/* font-family: 'Titillium Web', sans-serif !important; */
+		font-family: 'Raleway', sans-serif !important;
+		/* font-weight: 100 !important; */
+		/* font-size: 18px; */
+		/* background: #e9ebe9; */
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: 'Titillium Web', sans-serif !important;
-		font-weight: 100 !important;
+		/* font-family: 'Titillium Web', sans-serif !important; */
+		font-family: 'Josefin Sans', sans-serif !important;
+		/* font-weight: 100 !important; */
 	}
 
 	iframe, object, embed {
 		width: 100%;
-		border-radius: 4px;
+		/* border-radius: 4px; */
+		border-radius: 0.25rem;
 	}
 
 	#gmap iframe, #gmap object, #gmap embed {
 		width: 100%;
-		border-radius: 4px;
+		border-radius: 0.25rem;
+		/* border-radius: 4px; */
 	}
 
 	.page-title h1,
@@ -30,7 +40,9 @@
 		background-color: rgba(255,255,255,0.7);
 		padding-left: 15px;
 		padding-right: 15px;
-		border-radius: 4px;
+		padding-top: 15px;
+		border-radius: 0.25rem;
+		/* border-radius: 4px; */
 	}
 
 	#jumbotron-header h1 span.header-h1,
@@ -39,7 +51,9 @@
 		background-color: rgba(255,255,255,0.7);
 		padding-left: 15px;
 		padding-right: 15px;
-		border-radius: 4px;
+		padding-top: 15px;
+		border-radius: 0.25rem;
+		/* border-radius: 4px; */
 	}
 
 	h1.textmedia-header span.header-h1 {
@@ -47,13 +61,15 @@
 	}
 
 	img {
-		border-radius: 4px;
+		border-radius: 0.25rem;
+		/* border-radius: 4px; */
 	}
 
 }
 
 
 @media screen and (max-width: 767px) {
+
 	.navbar-nav .open .dropdown-menu {
 		background-color: #317eac !important;
 	}
