--- a/Resources/Private/ext/news/Templates/ViewHelpers/Widget/Paginate/Index.html
+++ b/Resources/Private/ext/news/Templates/ViewHelpers/Widget/Paginate/Index.html
@@ -31,11 +31,11 @@
 		</f:if>
 
 		<div class="page-navigation">
-			<nav aria-label="my-navigation">
+			<nav aria-label="tw-navigation-news-list">
 			<p>
 				<f:translate key="paginate_overall" arguments="{0:pagination.current,1:pagination.numberOfPages}" />
 			</p>
-			<ul class="f3-widget-paginator pagination">
+			<ul class="f3-widget-paginator pagination justify-content-center">
 				<f:if condition="{pagination.previousPage}">
 					<li class="page-item previous">
 						<f:if condition="{pagination.previousPage} > 1">
