--- a/Resources/Public/css/my.css
+++ b/Resources/Public/css/my.css
@@ -65,6 +65,11 @@
 		/* border-radius: 4px; */
 	}
 
+	ul.f3-widget-paginator.pagination {
+		padding-bottom: 18px;
+		margin-bottom:  18px;
+	}
+
 }
 
 
